# opysearch

./: CHANGELOG.md  README.md  requirements-dev.txt  setup.cfg
.github/workflows/: main.yml  release-please.yml
opynsearch/: atom.py  description.py  osdd11.py  result.py  utils.py  xml.py
tests/: test_atom.py  test_osdd11.py
tests/data/: atom.xml
