[metadata]
name = opynsearch
version = attr: opynsearch.__version__
description = OpenSearch client library
long_description = file: README.md, CHANGELOG.md, LICENSE
keywords = OpenSearch
license = MIT License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
# zip_safe = False
# include_package_data = True
packages = find:
# scripts =
#     bin/first.py
#     bin/second.py
install_requires =
    lxml
    httpx
    dataclasses; python_version == "3.6"

# [options.package_data]
# * = *.txt, *.rst
# hello = *.msg

[options.entry_points]
# console_scripts =
#     executable-name = package.module:function

# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

# [options.packages.find]
# exclude =
#     src.subpackage1
#     src.subpackage2

[flake8]
max-line-length = 100
exclude = .venv, build, tests
ignore = W503,E203
